removed box-shadow for progres bar to display correctly on mobile and added population of rating score in modal

--- a/app/assets/stylesheets/bootstrap_and_overrides.css
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css
@@ -563,8 +563,10 @@ a.menu-link:hover {
 }
 
 .progress {
+  box-shadow: 0;
+  -webkit-box-shadow: 0 0 0 0;
+  background-color: transparent;
   height: 8px !important;
-  width: 100% !important;
   margin-top: 4px;
   margin-bottom: 4px;
   border-radius: 0;
